# dibs

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  PROMPT.md  README.md  SCENARIOS.md
docs/: running-scenario-tests.md
src/: config.rs  error.rs  lib.rs  main.rs
src/fs/: cas.rs  handles.rs  inodes.rs  mod.rs  passthrough.rs  virtual_dir.rs
src/state/: eviction.rs  hash_table.rs  mod.rs
src/watcher/: mod.rs
tests/: scenarios.rs
tests/helpers/: mod.rs  test_agent.rs
tests/integration/: cas_basic.rs  cas_delete_rename.rs  cas_external.rs  lifecycle.rs  mod.rs  performance.rs
