[package]
name = "dibs"
version = "0.1.0"
edition = "2021"
description = "A FUSE filesystem enforcing optimistic concurrency control for multi-agent environments"

[dependencies]
fuser = "0.17"
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
dashmap = "6"
parking_lot = "0.12"
notify = "7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "fs"] }
thiserror = "2"

[[bin]]
name = "dibs-test-agent"
path = "tests/helpers/test_agent.rs"

[dev-dependencies]
tempfile = "3"
rand = "0.8"
